--- a/_posts/2018-01-22-debugs.md
+++ b/_posts/2018-01-22-debugs.md
@@ -5,7 +5,7 @@ tags: 2018, v0
 
 Today, an important update has been made on the project.
 
-Please, checkout on the *master* branch (the *develop* one is now deprecated and not used) and pull the update.
+Please, checkout on the *main* branch (the *develop* one is now deprecated and not used) and pull the update.
 
 Off-axis WFS simulations and DM conjugated in altitude was not running correctly... Fortunately, we have solved the problem in this update.
 
